# rm27-nav-task

docs/: README.md  导航组考核报告.md
scripts/: demo_auto.sh  gazebo_box_mover.sh  run_demo.sh  send_sentry_command.py  start_gazebo_demo.sh  start_sentry.sh
sentry_behavior/: CMakeLists.txt  package.xml
sentry_behavior/launch/: sentry_competition.launch.py
sentry_behavior/scripts/: sentry_behavior.py  sentry_behavior_nav2.py
sentry_navigation/: CMakeLists.txt  package.xml
sentry_navigation/config/: nav2_params.yaml
sentry_navigation/launch/: localization.launch.py  nav_bringup.launch.py  sentry_auto.launch.py
sentry_navigation/maps/: map.pgm  map.yaml
sentry_navigation/scripts/: check_nav2_status.sh  moving_obstacle.py  save_map.py  simple_nav.py
代码/sentry_behavior/: CMakeLists.txt  package.xml
代码/sentry_behavior/launch/: sentry_competition.launch.py
代码/sentry_behavior/scripts/: sentry_behavior.py
代码/sentry_navigation/: CMakeLists.txt  package.xml
代码/sentry_navigation/config/: nav2_params.yaml
代码/sentry_navigation/launch/: localization.launch.py  sentry_auto.launch.py  slam_bringup.launch.py
代码/sentry_navigation/maps/: map.yaml
代码/sentry_navigation/scripts/: check_nav2_status.sh  moving_obstacle.py  odom_tf_publisher.py  save_map.py  simple_nav.py
文档/: README.md  task1_report.md  导航组考核报告.md
演示脚本/: run_demo.sh  start_sentry.sh
