<?xml version="1.0"?>
<package format="3">
  <name>sentry_behavior</name>
  <version>0.1.0</version>
  <description>RM27 Sentry Behavior Decision Tree</description>
  <maintainer email="sentry@rm27.com">sentry</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
